# Simasulas

./: CMakeLists.txt  Makefile  README.md  Untitled.mdj  main  main.cpp  pessoa.cpp  pessoa.h  principal.cpp
Header/: pessoa.h  principal.h
libs/: aluno.h  departamento.h  pessoa.h  principal.h  professor.h  universidade.h
src/: aluno.cpp  departamento.cpp  main.cpp  pessoa.cpp  principal.cpp  professor.cpp  universidade.cpp
